<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dip">


		<TableLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:stretchColumns="0">
			<TextView
				android:id="@+id/scope_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dip"
				android:text="@string/name_and_identity"
				android:textColor="#888"
				android:textSize="12dip"/>

			<TableRow>
				<TextView
					android:layout_column="1"
					android:textColor="#000"
					android:textSize="12dip"
					android:textStyle="bold"
					android:minWidth="60dip"
					android:gravity="center"
					android:text="@string/selfie"/>
				<TextView
					android:textColor="#000"
					android:textSize="12dip"
					android:textStyle="bold"
					android:minWidth="60dip"
					android:gravity="center"
					android:text="@string/translation"/>
			</TableRow>
			<LinearLayout
				android:orientation="vertical">
				<CheckBox
					android:id="@+id/scope_personal_details"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:checked="true"
					android:maxLines="1"
					android:ellipsize="end"
					android:text="@string/personal_details"/>
				<CheckBox
					android:id="@+id/scope_native_names"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="24dip"
					android:layout_marginStart="24dip"
					android:maxLines="1"
					android:ellipsize="end"
					android:text="@string/native_names"/>
			</LinearLayout>
			<TableRow>
				<CheckBox
					android:id="@+id/scope_passport"
					android:checked="true"
					android:maxLines="1"
					android:ellipsize="end"
					android:text="@string/passport"/>
				<CheckBox
					android:id="@+id/scope_passport_selfie"
					android:layout_gravity="center"/>
				<CheckBox
					android:id="@+id/scope_passport_translation"
					android:layout_gravity="center"/>
			</TableRow>
			<TableRow>
				<CheckBox
					android:id="@+id/scope_driver_license"
					android:checked="true"
					android:maxLines="1"
					android:ellipsize="end"
					android:text="@string/driver_license"/>
				<CheckBox
					android:id="@+id/scope_driver_license_selfie"
					android:layout_gravity="center"/>
				<CheckBox
					android:id="@+id/scope_driver_license_translation"
					android:layout_gravity="center"/>
			</TableRow>
			<TableRow>
				<CheckBox
					android:id="@+id/scope_identity_card"
					android:checked="true"
					android:maxLines="1"
					android:ellipsize="end"
					android:text="@string/identity_card"/>
				<CheckBox
					android:id="@+id/scope_identity_card_selfie"
					android:layout_gravity="center"/>
				<CheckBox
					android:id="@+id/scope_identity_card_translation"
					android:layout_gravity="center"/>
			</TableRow>
			<TableRow>
				<CheckBox
					android:id="@+id/scope_internal_passport"
					android:maxLines="1"
					android:ellipsize="end"
					android:text="@string/internal_passport"/>
				<CheckBox
					android:id="@+id/scope_internal_passport_selfie"
					android:layout_gravity="center"/>
				<CheckBox
					android:id="@+id/scope_internal_passport_translation"
					android:layout_gravity="center"/>
			</TableRow>

			<RadioGroup
				android:orientation="horizontal">
				<RadioButton
					android:id="@+id/scope_id_one_of"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="8dip"
					android:layout_marginEnd="8dip"
					android:checked="true"
					android:text="@string/one_of"/>
				<RadioButton
					android:id="@+id/scope_id_all_of"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/all_of"/>
			</RadioGroup>


			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dip"
				android:layout_marginTop="8dip"
				android:text="@string/address"
				android:textColor="#888"
				android:textSize="12dip"/>

			<TableRow>
				<TextView
					android:layout_column="2"
					android:textColor="#000"
					android:textSize="12dip"
					android:textStyle="bold"
					android:minWidth="60dip"
					android:gravity="center"
					android:text="@string/translation"/>
			</TableRow>

			<CheckBox
				android:id="@+id/scope_address"
				android:checked="true"
				android:maxLines="1"
				android:ellipsize="end"
				android:text="@string/address"/>
			<TableRow>
				<CheckBox
					android:id="@+id/scope_utility_bill"
					android:checked="true"
					android:layout_span="2"
					android:maxLines="1"
					android:ellipsize="end"
					android:text="@string/utility_bill"/>
				<CheckBox
					android:id="@+id/scope_utility_bill_translation"
					android:layout_gravity="center"/>
			</TableRow>
			<TableRow>
				<CheckBox
					android:id="@+id/scope_bank_statement"
					android:checked="true"
					android:layout_span="2"
					android:maxLines="1"
					android:ellipsize="end"
					android:text="@string/bank_statement"/>
				<CheckBox
					android:id="@+id/scope_bank_statement_translation"
					android:layout_gravity="center"/>
			</TableRow>
			<TableRow>
				<CheckBox
					android:id="@+id/scope_rental_agreement"
					android:checked="true"
					android:layout_span="2"
					android:maxLines="1"
					android:ellipsize="end"
					android:text="@string/rental_agreement"/>
				<CheckBox
					android:id="@+id/scope_rental_agreement_translation"
					android:layout_gravity="center"/>
			</TableRow>
			<TableRow>
				<CheckBox
					android:id="@+id/scope_passport_registration"
					android:layout_span="2"
					android:maxLines="1"
					android:ellipsize="end"
					android:text="@string/passport_registration"/>
				<CheckBox
					android:id="@+id/scope_passport_registration_translation"
					android:layout_gravity="center"/>
			</TableRow>
			<TableRow>
				<CheckBox
					android:id="@+id/scope_temporary_registration"
					android:layout_span="2"
					android:maxLines="1"
					android:ellipsize="end"
					android:text="@string/temporary_registration"/>
				<CheckBox
					android:id="@+id/scope_temporary_registration_translation"
					android:layout_gravity="center"/>
			</TableRow>

			<RadioGroup
				android:orientation="horizontal">
				<RadioButton
					android:id="@+id/scope_address_one_of"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="8dip"
					android:layout_marginEnd="8dip"
					android:checked="true"
					android:text="@string/one_of"/>
				<RadioButton
					android:id="@+id/scope_address_all_of"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/all_of"/>
			</RadioGroup>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dip"
				android:layout_marginTop="8dip"
				android:text="@string/contacts"
				android:textColor="#888"
				android:textSize="12dip"/>

			<CheckBox
				android:id="@+id/scope_phone"
				android:checked="true"
				android:maxLines="1"
				android:ellipsize="end"
				android:text="@string/phone_number"/>
			<CheckBox
				android:id="@+id/scope_email"
				android:checked="true"
				android:maxLines="1"
				android:ellipsize="end"
				android:text="@string/email"/>

		</TableLayout>

		<LinearLayout
			android:id="@+id/scope_one_of_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:baselineAligned="false"
			android:orientation="horizontal">
		</LinearLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/button_style_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dip"
				android:layout_marginTop="16dip"
				android:text="@string/button_style"
				android:textColor="#888"
				android:textSize="12dip"/>

			<ImageView
				android:id="@+id/straight_corner_icon"
				android:layout_width="16dip"
				android:layout_height="16dip"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:layout_below="@+id/button_style_title"
				android:layout_marginTop="8dip"
				android:src="@drawable/ic_corner_straight"/>

			<ImageView
				android:id="@+id/round_corner_icon"
				android:layout_width="16dip"
				android:layout_height="16dip"
				android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true"
				android:layout_below="@+id/button_style_title"
				android:layout_marginTop="8dip"
				android:src="@drawable/ic_corner_round"/>

			<android.support.v7.widget.AppCompatSeekBar
				android:id="@+id/corner_roundness_slider"
				android:layout_width="match_parent"
				android:layout_height="32dip"
				android:layout_below="@+id/button_style_title"
				android:layout_marginLeft="8dip"
				android:layout_marginRight="8dip"
				android:layout_toLeftOf="@+id/round_corner_icon"
				android:layout_toRightOf="@+id/straight_corner_icon"
				android:layout_toStartOf="@+id/round_corner_icon"
				android:layout_toEndOf="@+id/straight_corner_icon"
				android:max="1000"
				android:progress="300"/>
		</RelativeLayout>

		<org.telegram.passport.TelegramLoginButton
			android:id="@+id/login_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="16dip"
			android:layout_marginTop="18dip"/>

	</LinearLayout>

</ScrollView>